tests/errors/regex-empty-group/main.pa
# An empty `()` group inside a regular expression.
def main = `a()b`
